@@ -27,9 +27,6 @@ may have been fixed since this was written!
   is waiting for the the 100-continue response.
   http://curl.haxx.se/mail/lib-2008-08/0462.html
 
-59. If the CURLOPT_PORT option is used on an FTP URL like
-  "ftp://example.com/file;type=A" the ";type=A" is stripped off.
-
 58. It seems sensible to be able to use CURLOPT_NOBODY and
   CURLOPT_FAILONERROR with FTP to detect if a file exists or not, but it is
   not working: http://curl.haxx.se/mail/lib-2008-07/0295.html
